force-app/main/default/objects/fmgsohdrext__c/fmgsohdrext__c.object-meta.xml
<CustomObject>
    <label>FMG Sales Order Header Extension</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMG Sales Order Header Extension</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>