force-app/main/default/objects/fmgsohdrext__c/fields/fmgsohdrext_sohdr__c.field-meta.xml
<CustomField>
    <fullName>fmgsohdrext_sohdr__c</fullName>
    <label>Sales Order</label>
    <referenceTo>rstk__sohdr__c</referenceTo>
    <relationshipLabel>FMG Sales Order Header Extension</relationshipLabel>
    <relationshipName>fmgsohdrext</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>