force-app/main/default/objects/fmgsohdrext__c/fields/Inventory_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Transferred</label>
    <type>Checkbox</type>
</CustomField>