force-app/main/default/objects/fmgsohdrext__c/fields/IsEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee</label>
    <type>Checkbox</type>
</CustomField>