force-app/main/default/objects/fmgsohdrext__c/fields/IsFacility__c.field-meta.xml
<CustomField>
    <fullName>IsFacility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Facility</label>
    <type>Checkbox</type>
</CustomField>