force-app/main/default/objects/fmgsohdrext__c/fields/IsFirstOrder__c.field-meta.xml
<CustomField>
    <fullName>IsFirstOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Order</label>
    <type>Checkbox</type>
</CustomField>