force-app/main/default/objects/fmgsohdrext__c/fields/IsForeign__c.field-meta.xml
<CustomField>
    <fullName>IsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Foreign</label>
    <type>Checkbox</type>
</CustomField>