force-app/main/default/objects/fmgsohdrext__c/fields/IsHazardous__c.field-meta.xml
<CustomField>
    <fullName>IsHazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hazardous</label>
    <type>Checkbox</type>
</CustomField>