force-app/main/default/objects/fmgsohdrext__c/fields/IsOverweight__c.field-meta.xml
<CustomField>
    <fullName>IsOverweight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Overweight</label>
    <type>Checkbox</type>
</CustomField>