force-app/main/default/objects/fmgsohdrext__c/fields/IsPlatinum__c.field-meta.xml
<CustomField>
    <fullName>IsPlatinum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Platinum</label>
    <type>Checkbox</type>
</CustomField>