force-app/main/default/objects/fmgsohdrext__c/fields/Time_of_Pack__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Pack__c</fullName>
    <label>Time of Pack</label>
    <type>DateTime</type>
</CustomField>