force-app/main/default/objects/fmgsohdrext__c/fields/Time_of_Pick__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Pick__c</fullName>
    <label>Time of Pick</label>
    <type>DateTime</type>
</CustomField>