force-app/main/default/objects/fmgsohdrext__c/fields/Time_of_Ship__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Ship__c</fullName>
    <label>Time of Ship</label>
    <type>DateTime</type>
</CustomField>