force-app/main/default/objects/fmgsohdrext__c/listViews/Filtered.listView-meta.xml
<ListView>
    <fullName>Filtered</fullName>
    <columns>fmgsohdrext_sohdr__c</columns>
    <columns>batchId__c</columns>
    <columns>Inventory_Transferred__c</columns>
    <columns>IsHazardous__c</columns>
    <columns>IsLightweight__c</columns>
    <columns>IsPlatinum__c</columns>
    <columns>IsFacility__c</columns>
    <columns>IsEmployee__c</columns>
    <columns>IsFirstOrder__c</columns>
    <columns>IsForeign__c</columns>
    <columns>IsOverweight__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsFirstOrder__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Filtered</label>
</ListView>